tests/base/parser/bad/exps/exp_t-fun-lparen-id-colon-tid-rparen-arrow-with.scilexp
fun (x: Bool) => (* missing result *)
